--- a/Restaurant.html
+++ b/Restaurant.html
@@ -25,7 +25,7 @@
 <body>  
     <nav class="navbar navbar-expand-lg bg-white shadow-sm fixed-top" style="letter-spacing: 4px;">  
         <div class="container">  
-            <a class="navbar-brand" id="text-logo" href="#home">Gourmet au Catering</a>  
+            <a class="navbar-brand" id="text-logo" href="#home">Abigail Catering Services</a>  
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">  
                 <span class="navbar-toggler-icon"></span>  
             </button>  
