--- a/Restaurant.html
+++ b/Restaurant.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">  
                 <ul class="navbar-nav ms-auto d-none d-lg-flex" style="font-size: 90%;">  
                     <li class="nav-item">  
-                        <a class="nav-link" href="#about">About</a>  
+                        <a class="nav-link" href="#about">About Section</a>  
                     </li>  
                     <li class="nav-item">  
                         <a class="nav-link" href="#menu">Menu</a>  
